local/ec2.tf
resource "aws_instance" "devops" {
    ami = data.aws_ami.ami_info.id
    count = length(var.instance_names)
    instance_type = var.instance_names[count.index] == "mysql" ? "t3.small" : "t3.micro"
    vpc_security_group_ids = [aws_security_group.allow-ssh.id]
      tags = {
        Name = var.instance_names[count.index]
  }
  
}
resource "aws_security_group" "allow-ssh" {
    name = "allowSshPort"
    description = "allow the ssh port to connect the server"

    egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  
  tags = {
    Name = "allowSshPort"
  }
  
}
